{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 133,
  "lineage": "23c2c380-f56b-e611-8d7a-3d93a6508086",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "theoross-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:internet-gateway/igw-05c7e62e217bf5777",
            "id": "igw-05c7e62e217bf5777",
            "owner_id": "862686223907",
            "tags": {
              "Name": "theoross-ig"
            },
            "tags_all": {
              "Name": "theoross-ig"
            },
            "vpc_id": "vpc-0180c1de4dbf45e57"
          },
          "dependencies": [
            "aws_vpc.theoross-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "theoross-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:route-table/rtb-0469ebb08abeb1bae",
            "id": "rtb-0469ebb08abeb1bae",
            "owner_id": "862686223907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c7e62e217bf5777",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0180c1de4dbf45e57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.theoross-ig",
            "aws_vpc.theoross-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "theoross-application-deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:vpc/vpc-0180c1de4dbf45e57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-04f922065efd800a5",
            "default_route_table_id": "rtb-0022d8152fa280fd9",
            "default_security_group_id": "sg-051450ea7bcdeade0",
            "dhcp_options_id": "dopt-0298130dad1770616",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0180c1de4dbf45e57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0022d8152fa280fd9",
            "owner_id": "862686223907",
            "tags": {
              "Name": "theoross-application-deployment-vpc"
            },
            "tags_all": {
              "Name": "theoross-application-deployment-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097ed995a6ede1d1b",
            "arn": "arn:aws:ec2:us-east-1:862686223907:instance/i-02edb0c05a34f9dfd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02edb0c05a34f9dfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "theoross-awskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-014deac0917deb958",
            "private_dns": "ip-10-7-0-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.7.0.228",
            "public_ip": "3.85.224.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0257cef6bd2a34c51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0617cdac31c3fde6a",
            "tags": {
              "Name": "theoross-app"
            },
            "tags_all": {
              "Name": "theoross-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077455eb3a7993e36"
            ]
          },
          "dependencies": [
            "aws_vpc.theoross-application-deployment",
            "module.application-tier.aws_security_group.theoross-sg-group",
            "module.application-tier.aws_subnet.theoross-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "theoross-app-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ac35d088011e443",
            "route_table_id": "rtb-0469ebb08abeb1bae",
            "subnet_id": "subnet-0617cdac31c3fde6a"
          },
          "dependencies": [
            "aws_internet_gateway.theoross-ig",
            "aws_route_table.theoross-rt",
            "aws_vpc.theoross-application-deployment",
            "module.application-tier.aws_subnet.theoross-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "theoross-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:security-group/sg-077455eb3a7993e36",
            "description": "Alllow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077455eb3a7993e36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "86.111.139.40/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "theoross-app-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "theoross-app-sg"
            },
            "tags_all": {
              "Name": "theoross-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0180c1de4dbf45e57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.theoross-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3745181005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077455eb3a7993e36",
            "security_group_rule_id": "sgr-0c24caf7c37e857bd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.theoross-application-deployment",
            "module.application-tier.aws_security_group.theoross-sg-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "86.111.139.40/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-483871764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077455eb3a7993e36",
            "security_group_rule_id": "sgr-0a8ec0cdb297cfbbe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.theoross-application-deployment",
            "module.application-tier.aws_security_group.theoross-sg-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "3.145.165.69/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1055143825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077455eb3a7993e36",
            "security_group_rule_id": "sgr-06cc49a27979d2471",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application-tier.aws_security_group.theoross-sg-group"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "theoross-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:subnet/subnet-0617cdac31c3fde6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.7.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0617cdac31c3fde6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "theoross-app"
            },
            "tags_all": {
              "Name": "theoross-app"
            },
            "vpc_id": "vpc-0180c1de4dbf45e57"
          },
          "dependencies": [
            "aws_vpc.theoross-application-deployment"
          ]
        }
      ]
    }
  ]
}